Fix JUnit tests

--- a/src/glarmester/presentation/GUI.form
+++ b/src/glarmester/presentation/GUI.form
@@ -11,6 +11,8 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout"/>
     </Container>
+    <Component class="javax.swing.ButtonGroup" name="btnGrp">
+    </Component>
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
